--- a/projects/bulpa.html
+++ b/projects/bulpa.html
@@ -32,7 +32,7 @@
     <p><u>The Problem</u>: During my short time at Baruch College, many students relied on word of mouth when picking and choosing classes. Understandably, students wanted
     the best professor for their classes. Although sites like <a href="https://www.ratemyprofessors.com/" target="_blank">RateMyProfessor</a> exist, the reviews for Baruch College
     professors were either outdated or nonexistent - it simply could not keep up with the influx of new adjunct professors that taught at Baruch College, a prevalent problem throughout the CUNY system.</p>
-    <p><u>The Solution</u>: A Baruch College specific professor review website. The inspiration to create a school specific professor review website came from <a href="http://www.culpa.info/" target="_blank">CULPA</a>, a professor review website specific for Columbia University that's been around since 1997.</p>
+    <p><u>The Solution</u>: A Baruch College specific professor review website. The inspiration to create a school specific professor review website came from <a href="http://www.culpa.info/" target="_blank">CULPA</a>, a site that's allowed Columbia students to review Columbia professors/classes since 1997.</p>
     <h4>Challenges</h4>
     <ol>
         <li>Reducing/eliminating spam submissions
