--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h4>Personal Projects</h4>
     <ul>
-        <li><a href="/index.html">RickyShin.com</a>, fun fact - the color scheme changes depending on your system preferences <a href="/projects/this.html">[read more]</a></li>
+        <li><a href="/index.html">RickyShin.com</a>, fun fact - the color scheme on this website changes depending on your system preferences <a href="/projects/this.html">[read more]</a></li>
         <li><a href="https://www.covidinnyc.com/" target="_blank">COVID-19 in NYC: Charted</a>, a website that
             automatically fetches and charts data related to the COVID-19 pandemic in NYC <a href="/projects/covid-in-nyc.html">[read more]</a>
         </li>
