--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -24,7 +24,7 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h2>Escape Area 51: Raid Survival</h2>
-    <div style="text-align: center;"><a href="#img1"><img src="/imgs/escape51-1-s.png" class="thumbnail" alt="Screenshot of BULPA homepage" style="border: none;"></a></div>
+    <div style="text-align: center;"><a href="#img1"><img src="/imgs/escape51-1-s.png" class="thumbnail" alt="Screenshot of 'Escape Area 51' game main screen" style="border: none;"></a></div>
     <a href="#_" class="lightbox" id="img1"><img src="/imgs/escape51-1-l.png" style="border:none;"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <p style="text-align: center;"><a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053/" target="_blank">App Store Link</a></p>
@@ -34,7 +34,7 @@
     <p><u>The Inspiration</u>: During the summer of 2019, users on Facebook created a satirical event titled "Storm Area 51, They Can't Stop All of Us".
     Because of the absurdity of the event, it went viral and garnered millions of RSVP's <a href="https://en.wikipedia.org/wiki/Storm_Area_51" target="_blank">[read more]</a></p>
     <p><u>The Challenge</u>: Releasing a mobile game with the "Raid Area 51" meme being the central theme. Because of the viral nature of the meme and event date of September 2019, I had to develop and publish the app within a self-imposed (less than a month) deadline to remain relevant.</p>
-    <div style="text-align: center;"><a href="#img2"><img src="/imgs/escape51-2-s.png" class="thumbnail" alt="Screenshot of BULPA homepage" style="border: none;"></a></div>
+    <div style="text-align: center;"><a href="#img2"><img src="/imgs/escape51-2-s.png" class="thumbnail" alt="Screenshot of 'Escape Area 51' game play" style="border: none;"></a></div>
     <a href="#_" class="lightbox" id="img2"><img src="/imgs/escape51-2-l.png" style="border:none;"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <h4>Challenges</h4>
