--- a/projects/this.html
+++ b/projects/this.html
@@ -24,14 +24,13 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h2>This Website</h2>
-    <a href="#_" class="lightbox" id="img1"><img src="/imgs/dark-mode.gif"/></a>
+    <a href="#_" class="lightbox" id="img1"><img src="/imgs/dark-mode.gif" alt="Animated GIF showcasing 'prefers-color-scheme'"/></a>
     <p style="text-align: center;"><a href="https://github.com/ricky-shin/ricky-shin.github.io" target="_blank">GitHub Repository</a></p>
     <p>A website dedicated to showcasing my personal projects, as well as a dedicated link to my resume.</p>
     <p><u>The Inspiration</u>: Sort of like social media without any restrictions; the possibilities are limitless.</p>
     <p><u>The Challenge</u>: $0 upkeep (or realistically just the domain registration fees)</p>
     <h4>Challenges</h4>
     <ol>
-        <li>$0 Upkeep <ul><li>GitHub Pages, probably the best way to put up static websites nowdays</li></ul></li>
         <li>Light Mode or Dark Mode?<ul><li>Lots of people enjoy <a href="https://en.wikipedia.org/wiki/Light-on-dark_color_scheme" target="_blank">dark mode</a>. Personally, I do as well, it's especially helpful during the night while my lights are dimmed. At the same time, some users do not care much for dark mode. While it's not a huge deal, I wanted to see if I can implement both color schemes without any inconveniences to the user <ul><li>This was made possible by using '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-color-scheme" target="_blank">prefers-color-scheme</a>' <ul><li>An issue with using this CSS media feature is the fact that it's incompatible with Internet Explorer. As a result, the default color scheme for the website is the "light" mode.</li> <li>See it in action <a href="#img1">here</a>.</li></ul></li></ul> </li></ul></li>
     </ol>
     <footer>
