Stylisation of project name

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
     <h4>Personal Projects</h4>
     <ul>
         <li><a href="/index.html">RickyShin.com</a>, fun fact - the color scheme on this website changes depending on your system preferences <a href="/projects/this.html">[read more]</a></li>
-        <li><a href="https://www.covidinnyc.com/" target="_blank">COVID-19 in NYC: Charted</a>, a website that
+        <li><a href="https://www.covidinnyc.com/" target="_blank">COVIDinNYC.com</a>, a website that
             automatically fetches and charts data related to the COVID-19 pandemic in NYC <a href="/projects/covid-in-nyc.html">[read more]</a>
         </li>
-        <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa (Baruch Undeground Listing of
-                Professor Ability)</a>, a professor review website specific to Baruch College, City University of New
+        <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa.info</a>, a professor review website specific to Baruch College, City University of New
             York <a href="/projects/bulpa.html">[read more]</a> </li>
         <li><a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053/" target="_blank">Ecape
                 Area 51: Raid Survival</a>, a side-scrolling game currently live on the iOS App Store, with hundreds of
@@ -48,7 +47,7 @@
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: May 26th, 2020
+            Updated: June 4th, 2020
         </div>
     </footer>
 </body>
