--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul>
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
-        <li>Currently volunteering with the <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank"> Food Pantry at Columbia</a></li>
+        <!-- <li>Currently volunteering with the <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank"> Food Pantry at Columbia</a></li> -->
         <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
         <li>U.S. Army Veteran (2013 ~ 2016)</li>
 
@@ -47,7 +47,7 @@
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: June 4th, 2020
+            Updated: June 29th, 2020
         </div>
     </footer>
 </body>
