--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
-    <link rel="stylesheet" type="text/css" href="/global.css">
+    <link rel="stylesheet" type="text/css" href="global.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 
@@ -37,17 +37,22 @@
     <ul>
         <!-- <li><a href="/index.html">RickyShin.com</a>, fun fact - the color scheme on this website changes depending on your system preferences <a href="/projects/this.html">[read more]</a></li> -->
         <li><a href="https://www.covidinnyc.com/" target="_blank">COVIDinNYC.com</a>, a website that
-            automatically fetches and charts data related to the COVID-19 pandemic in NYC <a href="/projects/covid-in-nyc.html">[read more]</a>
+            automatically fetches and charts data related to the COVID-19 pandemic in NYC <a
+                href="/projects/covid-in-nyc.html">[read more]</a>
         </li>
-        <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa.info</a>, a professor review website specific to Baruch College, City University of New
+        <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa.info</a>, a professor review website
+            specific to Baruch College, City University of New
             York <a href="/projects/bulpa.html">[read more]</a> </li>
         <li><a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053/" target="_blank">Ecape
                 Area 51: Raid Survival</a>, a side-scrolling game currently live on the iOS App Store, with hundreds of
             downloads worldwide <a href="/projects/escape-area-51.html">[read more]</a></li>
+        <li><a href="https://github.com/ricky-shin/gatekeeper" target="_blank">Gatekeeper</a>, a Discord bot that allows server
+            administrators to seamlessly integrate custom domain email verification for their users <!-- <a
+                href="/projects/gatekeeper.html">[read more]</a> --> </li>
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: June 29th, 2020
+            Updated: August 4th, 2020
         </div>
     </footer>
 </body>
