Align text in 404 page

--- a/404.html
+++ b/404.html
@@ -29,11 +29,11 @@
         <div id="astroAnimation"></div>
         <script src="astronaut.js"></script>
       </section>
-    <p>Sorry, can't find this page. Care to <a href="mailto:hi@rickyshin.com">e-mail me</a> so I can fix it?</p>
+    <p style="text-align: center;">Sorry, can't find this page. Care to <a href="mailto:hi@rickyshin.com">e-mail me</a> so I can fix it?</p>
 
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: May 26th, 2020
+            Updated: August 4th, 2020
         </div>
     </footer>
 </body>
