--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="global.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+    <script src="lottie.js"></script>
 </head>
 
 <body>
@@ -24,6 +25,10 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h4>About Me</h4>
+    <section>
+        <div id="studentAnimation"></div>
+        <script src="home.js"></script>
+      </section>
     <ul>
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
