--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h4>About Me</h4>
-    <lottie-player src="imgs/student.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    <div style="text-align:center;">
+        <lottie-player src="imgs/student.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    </div>
     <ul>
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
