--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h4>About Me</h4>
-    <div style="text-align:center;">
-        <lottie-player src="imgs/student.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
-    </div>
+        <center><lottie-player src="imgs/student.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player></center>
     <ul>
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
