--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
-    <link rel="stylesheet" type="text/css" href="global.css">
+    <link rel="stylesheet" type="text/css" href="/global.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
     <script src="lottie.js"></script>
 </head>
@@ -27,7 +27,7 @@
     <h4>404 - Not Found</h4>
     <section>
         <div id="astroAnimation"></div>
-        <script src="astronaut.js"></script>
+        <script src="/astronaut.js"></script>
       </section>
     <p style="text-align: center;">Sorry, can't find this page. Care to <a href="mailto:hi@rickyshin.com">e-mail me</a> so I can fix it?</p>
 
