--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="/global.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-    <script src="lottie.js"></script>
+    <script src="/lottie.js"></script>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: August 4th, 2020
+            Updated: August 6th, 2020
         </div>
     </footer>
 </body>
