Update links & New Screenshots

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <h1>Ricky Shin</h1>
     <nav style="text-align: center;">
-        <a href="/index.html">Home</a>
+        <a href="/index">Home</a>
         <a href="/shin_resume.pdf">Resume</a>
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
@@ -40,21 +40,21 @@
         <!-- <li><a href="/index.html">RickyShin.com</a>, fun fact - the color scheme on this website changes depending on your system preferences <a href="/projects/this.html">[read more]</a></li> -->
         <li><a href="https://www.covidinnyc.com/" target="_blank">COVIDinNYC.com</a>, a website that
             automatically fetches and charts data related to the COVID-19 pandemic in NYC <a
-                href="/projects/covid-in-nyc.html">[read more]</a>
+                href="/projects/covid-in-nyc">[read more]</a>
         </li>
         <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa.info</a>, a professor review website
             specific to Baruch College, City University of New
-            York <a href="/projects/bulpa.html">[read more]</a> </li>
+            York <a href="/projects/bulpa">[read more]</a> </li>
         <li><a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053/" target="_blank">Ecape
                 Area 51: Raid Survival</a>, a side-scrolling game currently live on the iOS App Store, with hundreds of
-            downloads worldwide <a href="/projects/escape-area-51.html">[read more]</a></li>
+            downloads worldwide <a href="/projects/escape-area-51">[read more]</a></li>
         <li><a href="https://github.com/ricky-shin/gatekeeper" target="_blank">Gatekeeper</a>, a Discord bot that allows server
             administrators to seamlessly integrate custom domain email verification for their users <!-- <a
                 href="/projects/gatekeeper.html">[read more]</a> --> </li>
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: August 4th, 2020
+            Updated: August 24th, 2020
         </div>
     </footer>
 </body>
