--- a/projects/bulpa.html
+++ b/projects/bulpa.html
@@ -19,7 +19,7 @@
 <body>
     <h1>Ricky Shin</h1>
     <nav style="text-align: center;">
-        <a href="/index.html">Home</a>
+        <a href="/index">Home</a>
         <a href="/shin_resume.pdf">Resume</a>
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
@@ -95,7 +95,7 @@
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: May 26th, 2020
+            Updated: August 24th, 2020
         </div>
     </footer>
 </body>
