Remove border on main hompage screenshot for bulpa

--- a/projects/bulpa.html
+++ b/projects/bulpa.html
@@ -24,8 +24,8 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h2>Baruch Underground Listing of Professor Ability</h2>
-    <a href="#img1"><img src="/imgs/bulpa_home.png" class="thumbnail" alt="Screenshot of BULPA homepage"></a>
-    <a href="#_" class="lightbox" id="img1"><img src="/imgs/bulpa_home.png"/></a>
+    <a href="#img1"><img src="/imgs/bulpa_home.png" class="thumbnail" alt="Screenshot of BULPA homepage" style="border: none;"></a>
+    <a href="#_" class="lightbox" id="img1"><img src="/imgs/bulpa_home.png" style="border: none;"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <p style="text-align: center;"><a href="https://github.com/ricky-shin/bulpa" target="_blank">GitHub Repository</a></p>
     <p>A school-specific professor review site written in PHP. Not affiliated with the City University of New York or Baruch College.</p>
