New Screenshot for COVIDinNYC project

--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -19,7 +19,7 @@
 <body>
     <h1>Ricky Shin</h1>
     <nav style="text-align: center;">
-        <a href="/index.html">Home</a>
+        <a href="/index">Home</a>
         <a href="/shin_resume.pdf">Resume</a>
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
