Display example of reviews in bulpa project

--- a/projects/bulpa.html
+++ b/projects/bulpa.html
@@ -62,6 +62,10 @@
         <li>Sharing Specific Reviews (Permalinks)</li>
         <ul><li>Because every single review had a unique identifier, I could query a specific review <ul><li>e.g. /review.php?id=5 would fetch the review with 'id' 5</li></ul> </li></ul>
     </ol>
+
+    <a href="#img4"><img src="/imgs/bulpa-display-review.png" class="thumbnail" alt="Screenshot displaying review page" style="border: none;"></a>
+    <a href="#_" class="lightbox" id="img4"><img src="/imgs/bulpa-display-review.png" style="border: none;"/></a>
+
     <h4>Database Schema</h4>
     <ul>
         <li>reviews
