--- a/projects/bulpa.html
+++ b/projects/bulpa.html
@@ -65,6 +65,7 @@
 
     <a href="#img4"><img src="/imgs/bulpa-display-review.png" class="thumbnail" alt="Screenshot displaying review page" style="border: none;"></a>
     <a href="#_" class="lightbox" id="img4"><img src="/imgs/bulpa-display-review.png" style="border: none;"/></a>
+    <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
 
     <h4>Database Schema</h4>
     <ul>
