--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <ul>
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
-        <!-- <li>Currently volunteering with the <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank"> Food Pantry at Columbia</a></li> -->
+                <ul>
+                    <li>Volunteering with the <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank"> Food Pantry at Columbia</a></li>
+                </ul>
         <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
         <li>U.S. Army Veteran (2013 ~ 2016)</li>
 
@@ -37,7 +39,6 @@
 
     <h4>Personal Projects</h4>
     <ul>
-        <!-- <li><a href="/index.html">RickyShin.com</a>, fun fact - the color scheme on this website changes depending on your system preferences <a href="/projects/this.html">[read more]</a></li> -->
         <li><a href="https://www.covidinnyc.com/" target="_blank">COVIDinNYC.com</a>, a website that
             automatically fetches and charts data related to the COVID-19 pandemic in NYC <a
                 href="/projects/covid-in-nyc">[read more]</a>
