Wording of TFP @ Columbia Fixed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
                 <ul>
-                    <li>Volunteering with the <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank"> Food Pantry at Columbia</a></li>
+                    <li>Volunteering with <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food Pantry at Columbia</a></li>
                 </ul>
         <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
         <li>U.S. Army Veteran (2013 ~ 2016)</li>
