--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
                 <ul>
+                    <li>TA for <i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>)</li>
                     <li>Volunteering with <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food Pantry at Columbia</a></li>
                 </ul>
         <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
