--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
                 <ul>
-                    <!-- <li>TA for <i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>)</li> -->
-                    <li>Board Member at <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food Pantry at Columbia</a></li>
+                    <li>TA for <i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>)</li>
+                    <li>Vice Chair of Technology at <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food Pantry at Columbia</a></li>
                 </ul>
         <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
         <li>U.S. Army Veteran (2013 ~ 2016)</li>
