"NEW" badge, prelim drafts for new project, typo fix
- "New" css badge to be used for new projects
- Preliminary draft showcasing project I worked on over the summer
- Typo fixes in two project articles
- In hand image of "Escape Area 51" embedded in project page

--- a/projects/bulpa.html
+++ b/projects/bulpa.html
@@ -96,7 +96,7 @@
     <a href="#_" class="lightbox" id="img3"><img src="/imgs/bulpa-analytics-flow.png"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <ul>
-        <li>Most users prefered to search and read reviews rather than submit reviews (as expected)</li>
+        <li>Most users preferred to search and read reviews rather than submit reviews</li>
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
