--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -43,6 +43,9 @@
         <li>Gameplay Design <ul><li>I decided to use a "<a href="https://en.wikipedia.org/wiki/Platform_game#Endless_running_games" target="_blank">endless running game</a>" design, prevalent in mobile games</li></ul></li>
         <li>Score Tracking/Leaderboards <ul><li>To incentivize replay value and competition, I implemented <a href="https://developer.apple.com/documentation/gamekit/" target="_blank">GameKit</a> into the app <ul><li>This also allowed me to avoid paying for alternative servers to host a database with user scores</li></ul></li></ul></li>
     </ol>
+    <div style="text-align: center;"><a href="#img1"><img src="/imgs/escape51-inhand.jpg" class="thumbnail" alt="Picture of 'Escape Area 51' game being played" style="border: none;"></a></div>
+    <a href="#_" class="lightbox" id="img2"><img src="/imgs/escape51-inhand.jpg" style="border:none;"/></a>
+    <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
 
     <footer>
         <div style="font-style: italic; font-size: x-small;">
