--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ricky Shin</title>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Personal Website for Ricky Shin, Computer Science Student at Columbia University and U.S. Army Veteran">
+        content="Personal Website for Richard (Ricky) Shin, Computer Science Student at Columbia University and U.S. Army Veteran">
     <meta name="keywords" content="personal website">
     <meta name="author" content="Ricky Shin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="global.css">
+    <link rel="stylesheet" type="text/css" href="badge.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
@@ -25,14 +26,21 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h4>About Me</h4>
-        <center><lottie-player src="imgs/student.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player></center>
+    <center>
+        <lottie-player src="imgs/student.json" background="transparent" speed="1" style="width: 300px; height: 300px;"
+            loop autoplay></lottie-player>
+    </center>
     <ul>
         <li>Third-year Computer Science student at <a href="https://www.columbia.edu/" target="_blank">Columbia
                 University</a></li>
-                <ul>
-                    <li>TA for <i>Computing in Context</i> (<a href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/" target="_blank">COMS W1002</a>)</li>
-                    <li>Vice Chair of Technology at <a href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food Pantry at Columbia</a></li>
-                </ul>
+        <ul>
+            <li>TA for <i>Computing in Context</i> (<a
+                    href="http://www.columbia.edu/cu/bulletin/uwb/#/cu/bulletin/uwb/subj/COMS/W1002-20203-001/"
+                    target="_blank">COMS W1002</a>)</li>
+            <li>Vice Chair of Technology at <a
+                    href="https://thefoodpantry.studentgroups.columbia.edu/people/richard-shin" target="_blank">The Food
+                    Pantry at Columbia</a></li>
+        </ul>
         <li>Previously interned at <a href="https://foursquare.com/" target="_blank">Foursquare</a> (Summer 2019)</li>
         <li>U.S. Army Veteran (2013 ~ 2016)</li>
 
@@ -40,6 +48,21 @@
 
     <h4>Personal Projects</h4>
     <ul>
+        <!--
+        <li><span class="badge badge--success badge--smaller">NEW!</span> <a href="https://thefoodpantry.us/"
+                target="_blank">The Food Pantry at Colubmia (eCommerce Platform)</a>, developing and implementing an
+            eCommerce platform
+            to improve efficiency in a student-run, non-profit food pantry
+                <a
+                href="/projects/food-pantry.html">[read more]</a>
+        </li>
+        -->
+        <li> <a href="https://github.com/ricky-shin/gatekeeper" target="_blank">Gatekeeper</a>, a Discord bot that
+            allows server
+            administrators to seamlessly integrate custom domain email verification for their users
+            <!-- <a
+                href="/projects/gatekeeper.html">[read more]</a> -->
+        </li>
         <li><a href="https://www.covidinnyc.com/" target="_blank">COVIDinNYC.com</a>, a website that
             automatically fetches and charts data related to the COVID-19 pandemic in NYC <a
                 href="/projects/covid-in-nyc">[read more]</a>
@@ -47,12 +70,9 @@
         <li><a href="https://github.com/ricky-shin/bulpa" target="_blank">bulpa.info</a>, a professor review website
             specific to Baruch College, City University of New
             York <a href="/projects/bulpa">[read more]</a> </li>
-        <li><a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053/" target="_blank">Ecape
+        <li><a href="/projects/escape-area-51" target="_blank">Ecape
                 Area 51: Raid Survival</a>, a side-scrolling game currently live on the iOS App Store, with hundreds of
             downloads worldwide <a href="/projects/escape-area-51">[read more]</a></li>
-        <li><a href="https://github.com/ricky-shin/gatekeeper" target="_blank">Gatekeeper</a>, a Discord bot that allows server
-            administrators to seamlessly integrate custom domain email verification for their users <!-- <a
-                href="/projects/gatekeeper.html">[read more]</a> --> </li>
     </ul>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
