Replace App. Store Link w/ Image

--- a/projects/food-pantry.html
+++ b/projects/food-pantry.html
@@ -30,13 +30,14 @@
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <p style="text-align: center;"><a href="https://thefoodpantry.us/" target="_blank">Project Link</a></p>
     <p>The Food Pantry at Columbia is a student-run, non-profit organization under the purview of Columbia University.
-        The Pantry distributes foods and vouchers to students affilated with Columbia University.</p>
+        The Pantry distributes foods and vouchers to food insecure students affilated within the university.</p>
     <p><u>The Problem</u>: Before I came on board, many of the operational tasks (inventorying, assignment and food
         distribution) within the Pantry were done manually. This operational method proved to be unsustainable with
         the increase of disbursement requests following the COVID-19 pandemic.</p>
     <p><u>The Solution</u>: A new eCommerce platform that allows inventorying, product management, student data
         retention, back-end management and more - built off WordPress, WooCommerce and custom plugins made specifically
         for the Pantry.</p>
+    <!-- <p><u>The Result</u>: Within the first week of implementing this new system, Pantry operations saw a X amount of</p> -->
     <h4>Challenges</h4>
     <ol>
         <li>Working Remotely (Start to Finish)
@@ -57,7 +58,7 @@
                 </ul>
             </ul>
         </li>
-        <li>Development and Launch
+        <li>Two Locations, One Site
             <ul>
                 <li></li>
             </ul>
