--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -30,6 +30,7 @@
     <a href="#_" class="lightbox" id="img4"><img src="/imgs/escapearea51-appstore.png"/></a>
     <p style="text-align: center;"><a href="#img4">App Store Link (Image)</a></p>
     <!-- https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053/ -->
+    <p>Update: The application is no longer on the App Store as I chose not renew my Developer License.</p>
     <p>A 2-D side-scrolling game featuring randomly generated barriers that players must pass through to earn points. The game is over once players collide with a barrier, and the total score
         earned is uploaded to a leaderboard. Built with Swift, using the <a href="https://developer.apple.com/documentation/spritekit" target="_blank">SpriteKit</a> framework.
     </p>
