--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -42,9 +42,9 @@
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <h4>Challenges</h4>
     <ol>
-        <li>Game Assets <ul><li>Truthfully, graphic design is not my strong suit. Because my main focus was to develop and most importantly <u>publish</u> an app on the iOS app store within a month, most, if not all of the assets used in "Escape Area 51" is sourced from royalty free websites</li></ul></li>
-        <li>Gameplay Design <ul><li>I decided to use a "<a href="https://en.wikipedia.org/wiki/Platform_game#Endless_running_games" target="_blank">endless running game</a>" design, prevalent in mobile games</li></ul></li>
-        <li>Score Tracking/Leaderboards <ul><li>To incentivize replay value and competition, I implemented <a href="https://developer.apple.com/documentation/gamekit/" target="_blank">GameKit</a> into the app <ul><li>This also allowed me to avoid paying for alternative servers to host a database with user scores</li></ul></li></ul></li>
+        <li>Game Assets <ul><li>It was challenging to find royalty free assets for the game</li></ul></li>
+        <li>Time Management<ul><li>It was really important to me that I finish and publish the app before the "Storm Area 51" Facebook event date. Because I was interning at Foursquare over the summer, I spent a lot of afternoons and weekends working on this side project.</li></ul></li>
+        <li>Leaderboard Implementation<ul><li>To incentivize replay value and competition, I implemented <a href="https://developer.apple.com/documentation/gamekit/" target="_blank">GameKit</a> into the app <ul><li>This also allowed me to avoid paying for alternative servers to host a database with user scores</li></ul></li></ul></li>
     </ol>
     <a href="#img3"><img src="/imgs/escape51-inhand.jpg" class="thumbnail" alt="Picture of 'Escape Area 51' game being played"></a>
     <a href="#_" class="lightbox" id="img3"><img src="/imgs/escape51-inhand.jpg"/></a>
