--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -43,8 +43,8 @@
     <h4>Challenges</h4>
     <ol>
         <li>Game Assets <ul><li>It was challenging to find royalty free assets for the game</li></ul></li>
-        <li>Time Management<ul><li>It was really important to me that I finish and publish the app before the "Storm Area 51" Facebook event date. Because I was interning at Foursquare over the summer, I spent a lot of afternoons and weekends working on this side project.</li></ul></li>
-        <li>Leaderboard Implementation<ul><li>To incentivize replay value and competition, I implemented <a href="https://developer.apple.com/documentation/gamekit/" target="_blank">GameKit</a> into the app <ul><li>This also allowed me to avoid paying for alternative servers to host a database with user scores</li></ul></li></ul></li>
+        <li>Time Management<ul><li>Finding time to work on the app with a self imposed deadline was quite difficult as I was working full time during the day; nevertheless I met my deadline! </li></ul></li>
+        <li>Leaderboard Implementation<ul><li>To incentivize replay value and competition, I implemented <a href="https://developer.apple.com/documentation/gamekit/" target="_blank">GameKit</a> into the app.</li></ul></li>
     </ol>
     <a href="#img3"><img src="/imgs/escape51-inhand.jpg" class="thumbnail" alt="Picture of 'Escape Area 51' game being played"></a>
     <a href="#_" class="lightbox" id="img3"><img src="/imgs/escape51-inhand.jpg"/></a>
