--- a/projects/escape-area-51.html
+++ b/projects/escape-area-51.html
@@ -42,7 +42,7 @@
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <h4>Challenges</h4>
     <ol>
-        <li>Game Assets <ul><li>It was challenging to find royalty free assets for the game</li></ul></li>
+        <li>Game Assets <ul><li>I knew nothing about creating video game assets so I figured finding royalty free assets would be the easiest route. However, finding assets that meshed well proved to be difficult.</li></ul></li>
         <li>Time Management<ul><li>Finding time to work on the app with a self imposed deadline was quite difficult as I was working full time during the day; nevertheless I met my deadline! </li></ul></li>
         <li>Leaderboard Implementation<ul><li>To incentivize replay value and competition, I implemented <a href="https://developer.apple.com/documentation/gamekit/" target="_blank">GameKit</a> into the app.</li></ul></li>
     </ol>
