Open Graph compliant metatags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <title>Ricky Shin</title>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="Personal Website for Richard (Ricky) Shin, Computer Science Student at Columbia University and U.S. Army Veteran">
-    <meta name="keywords" content="personal website">
-    <meta name="author" content="Ricky Shin">
+    <meta name="author" content="Richard Shin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property='og:title' content="Richard's Personal Website"/>
+    <meta property="og:image" content="https://www.rickyshin.com/imgs/index-framed.png" />
+    <meta property='og:description' content="Richard's (aka Ricky by close friends) personal website showcasing personal projects"/>
+    <meta property='og:url' content='https://www.rickyshin.com/'/>
+
+
     <link rel="apple-touch-icon" sizes="180x180" href="/imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon/favicon-16x16.png">
