--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta charset="UTF-8">
     <meta name="author" content="Richard Shin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property='og:title' content="Richard's Personal Website"/>
-    <meta property="og:image" content="https://www.rickyshin.com/imgs/index-framed.png" />
-    <meta property='og:description' content="Richard's (aka Ricky by close friends) personal website showcasing personal projects"/>
-    <meta property='og:url' content='https://www.rickyshin.com/'/>
+    <!-- Open Graph Tags -->
+    <meta property="og:url" content="https://www.rickyshin.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Richard's Personal Website">
+    <meta property="og:description" content="Richard's (aka Ricky) personal website showcasing personal projects">
+    <meta property="og:image" content="https://www.rickyshin.com/imgs/index-framed.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:url" content="https://www.rickyshin.com/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Richard's Personal Website">
+    <meta name="twitter:description" content="Richard's (aka Ricky) personal website showcasing personal projects">
+    <meta name="twitter:image" content="https://www.rickyshin.com/imgs/index-framed.png">
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="/imgs/favicon/apple-touch-icon.png">
